# house-price-predictor

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: house_price_model.joblib  model_metadata.json
dashboard/: index.html
data/processed/: featured_housing.csv  residuals.csv
data/raw/: california_housing_sample.csv
docs/: ARCHITECTURE.md  DATA_CARD.md  MODEL_CARD.md
examples/: prediction-request.json
reports/: metrics-summary.json
scripts/: generate_reports.py  generate_sample_data.py  train.py
sql/: analysis.sql
src/house_price_predictor/: __init__.py  api.py  cli.py  config.py  data.py  evaluation.py  features.py  model.py  reporting.py  training.py
tests/: test_api_cli.py  test_data.py  test_features_model.py
